add frontend for auth & books management